@@ -1,5 +1,9 @@
 2019-04-02  Andreas Krebbel  <krebbel@linux.ibm.com>
 
+	* gcc.target/s390/arch13/popcount-1.c: New test.
+
+2019-04-02  Andreas Krebbel  <krebbel@linux.ibm.com>
+
 	* gcc.target/s390/arch13/bitops-1.c: New test.
 	* gcc.target/s390/arch13/bitops-2.c: New test.
 	* gcc.target/s390/md/andc-splitter-1.c: Add -march=z14 build
